wip refactoring to add logging